add lab results to output

--- a/models/scikitlearn/sklearn_model.ipynb
+++ b/models/scikitlearn/sklearn_model.ipynb
@@ -56,12 +56,12 @@
     "X = pd.get_dummies(\n",
     "    df_features,\n",
     "    columns=categorical_feature_cols,\n",
-    "    drop_first=True,     # optional: avoids dummy trap; remove if you prefer full rank\n",
+    "    drop_first=True,\n",
     "    dummy_na=False,\n",
     "    dtype='int8'\n",
     ")\n",
     "\n",
-    "# Drop non-predictive ID columns if desired\n",
+    "# Drop non-predictive ID columns\n",
     "cols_to_drop = [c for c in ['patientunitstayid'] if c in X.columns]\n",
     "X = X.drop(columns=cols_to_drop)\n",
     "\n",
@@ -77,10 +77,10 @@
     "# ---------------------------\n",
     "n_classes = len(le_y.classes_)\n",
     "model = XGBClassifier(\n",
-    "    objective='multi:softprob',  # predicts class probabilities for multi-class\n",
+    "    objective='multi:softprob',\n",
     "    num_class=n_classes,\n",
     "    eval_metric='mlogloss',\n",
-    "    tree_method='hist',          # fast default; adjust depending on environment/GPU\n",
+    "    tree_method='hist',\n",
     "    random_state=42\n",
     ")\n",
     "\n",
