cleaning and autodiscovery

--- a/examples/ex1-xgboost-short/xgboost_small.ipynb
+++ b/examples/ex1-xgboost-short/xgboost_small.ipynb
@@ -11,8 +11,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T17:00:50.669318813Z",
-     "start_time": "2026-02-19T17:00:50.225217344Z"
+     "end_time": "2026-02-19T19:50:33.679443378Z",
+     "start_time": "2026-02-19T19:50:33.556441940Z"
     }
    },
    "cell_type": "code",
@@ -27,8 +27,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics import classification_report, f1_score\n",
     "from xgboost import XGBClassifier\n",
-    "\n",
-    "from xaicompare.runner import publish_run"
+    "\n"
    ],
    "id": "f19d7466bd0d6c87",
    "outputs": [],
@@ -37,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T17:00:54.473220205Z",
-     "start_time": "2026-02-19T17:00:54.308964386Z"
+     "end_time": "2026-02-19T19:50:37.854218073Z",
+     "start_time": "2026-02-19T19:50:37.710268663Z"
     }
    },
    "cell_type": "code",
@@ -224,8 +223,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T17:00:57.023579900Z",
-     "start_time": "2026-02-19T17:00:56.996209499Z"
+     "end_time": "2026-02-19T19:50:42.856540940Z",
+     "start_time": "2026-02-19T19:50:42.837136386Z"
     }
    },
    "cell_type": "code",
@@ -264,13 +263,13 @@
    ],
    "id": "21a3e54a63e2b740",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T17:03:43.002933853Z",
-     "start_time": "2026-02-19T17:01:01.613104168Z"
+     "end_time": "2026-02-19T19:40:34.255179349Z",
+     "start_time": "2026-02-19T19:37:49.517749047Z"
     }
    },
    "cell_type": "code",
@@ -302,8 +301,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T17:16:56.441355032Z",
-     "start_time": "2026-02-19T17:16:55.906943076Z"
+     "end_time": "2026-02-19T19:50:47.413529562Z",
+     "start_time": "2026-02-19T19:50:45.835120248Z"
     }
    },
    "cell_type": "code",
@@ -339,17 +338,18 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T17:17:20.675674434Z",
-     "start_time": "2026-02-19T17:17:15.588058046Z"
+     "end_time": "2026-02-19T19:50:56.483093318Z",
+     "start_time": "2026-02-19T19:50:50.109718493Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from xaicompare.runner import publish_run\n",
     "publish_run(\n",
     "    model=pipe,\n",
     "    X_test=X_test,                          # raw texts if pipeline contains TF-IDF\n",
@@ -359,20 +359,79 @@
     "    run_dir=\"../../runs/ex1_xgboost_short2\",\n",
     "    config={\"batch_size\": 2,                # tiny batches to avoid OOM\n",
     "            \"rows_limit_global\": 200,       # compute global on first 200 rows\n",
-    "            \"rows_limit_local\": 200}        # store local top-k for first 200 rows\n",
+    "            \"rows_limit_local\": 200}, # store local top-k for first 200 rows\n",
     ")\n"
    ],
    "id": "719e7fd511890252",
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Running XAI methods:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7c036bacabd4410bb2ab2aa46c9bcd8f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[shap_tree] Global importance:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c1a3ba67749249dcafe1a0b6cdff3524"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[WARN] Feature mismatch: SHAP=19999, TFIDF=20000. Truncating both to 19999.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[shap_tree] Local explanations:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "e2e9ebfbbaaf4f0bad05136c16e12002"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
     }
    ],
-   "execution_count": 9
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "5a0e316fd4266fc4",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
